--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-localization": "~12.0.0",
     "expo-status-bar": "~1.2.0",
+    "i18n-js": "^3.8.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -20,7 +22,8 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-plugin-module-resolver": "^4.1.0"
   },
   "private": true
 }
