--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.2.0",
+    "react-native-figma-squircle": "^0.2.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "^2.3.1",
+    "react-native-redash": "^16.2.3",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
