--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "animation",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "https://github.com/Shopify/react-native-skia/releases/download/v0.1.107-alpha/shopify-react-native-skia-0.1.107.tgz",
     "expo": "~44.0.0",
     "expo-localization": "~12.0.0",
     "expo-status-bar": "~1.2.0",
