--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.64.3",
     "react-native-figma-squircle": "^0.2.0",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-redash": "^16.2.3",
     "react-native-svg": "12.1.1",
